components/good-old-quarkus/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: local-transit
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: good-old-quarkus
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elgood-old-quarkus
  namespace: shbose
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-good-old-quarkus
    weight: null
status: {}
